can generate single process with branching and select